--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Desafio 4 - React Facebook</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="app"></div>
 
     <script src="./bundle.js"></script>
   </body>
